--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
+     Colocar primer /, con routing en ciertos casos se pierden los estilos, recordar.
+    -->
+    <link rel="stylesheet" href = "/css/bootstrap.min.css" /> 
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
